src/test/ui/empty/empty-struct-braces-pat-3.stderr
error[E0532]: expected tuple struct/variant, found struct variant `E::Empty3`
  --> $DIR/empty-struct-braces-pat-3.rs:27:9
   |
LL |         E::Empty3() => ()
   |         ^^^^^^^^^ did you mean `E::Empty3 { /* fields */ }`?

error[E0532]: expected tuple struct/variant, found struct variant `XE::XEmpty3`
  --> $DIR/empty-struct-braces-pat-3.rs:31:9
   |
LL |         XE::XEmpty3() => ()
   |         ^^^^-------
   |         |   |
   |         |   did you mean `XEmpty5`?
   |         did you mean `XE::XEmpty3 { /* fields */ }`?

error[E0532]: expected tuple struct/variant, found struct variant `E::Empty3`
  --> $DIR/empty-struct-braces-pat-3.rs:35:9
   |
LL |         E::Empty3(..) => ()
   |         ^^^^^^^^^ did you mean `E::Empty3 { /* fields */ }`?

error[E0532]: expected tuple struct/variant, found struct variant `XE::XEmpty3`
  --> $DIR/empty-struct-braces-pat-3.rs:39:9
   |
LL |         XE::XEmpty3(..) => ()
   |         ^^^^-------
   |         |   |
   |         |   did you mean `XEmpty5`?
   |         did you mean `XE::XEmpty3 { /* fields */ }`?

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0532`.
